--- a/index.css
+++ b/index.css
@@ -6,40 +6,48 @@ div.index-title {
 	background-color: #3E508B;
 	padding: 3px 10px 3px 5px;
 	margin: 15px 0px 0px 0px;
-	font-family: Arial, Helvetica, sans-serif;;
+	font-family: Arial, Helvetica, sans-serif;
+	;
 	font-size: 12pt;
 	color: white;
-	clear: both;}
-	
+	clear: both;
+}
+
 p.index-welcome {
 	line-height: 140%;
 	font-size: 9pt;
 	padding: 0px;
 	margin: 10px 10px 10px 5px;
-	clear: both;}
+	clear: both;
+}
 
 img.welcome {
 	float: left;
 	margin: 0px 10px 10px 0px;
-	}
-	
+}
+
 table#index-images {
-	margin-top: 15px; }
-	
+	margin-top: 15px;
+}
+
 td#index-image-left {
-	padding-right: 15px; }
+	padding-right: 15px;
+}
 
 td#index-image-middle {
-	padding-right: 15px; }
-	
+	padding-right: 15px;
+}
+
 td#index-column-left {
 	vertical-align: top;
 	width: 340px;
-	padding-right: 10px; }
-	
+	padding-right: 10px;
+}
+
 td#index-column-right {
 	vertical-align: top;
-	width: 340px; }
+	width: 340px;
+}
 
 img.bar {
 	float: left;
@@ -48,7 +56,7 @@ img.bar {
 	width: 163px;
 	height: 163px;
 }
-	
+
 /***********************************************
 * seminars
 ************************************************/
@@ -56,84 +64,93 @@ img.bar {
 div.index-seminar {
 	margin: 0px;
 	padding: 0px 0px 0px 5px;
-	}
+}
 
 span.index-seminar-day {
-	font-weight: bold; }
-	
+	font-weight: bold;
+}
+
 a.index-seminar-title {
-	text-decoration: none; 
-	color: #3E508B;}
-	
+	text-decoration: none;
+	color: #3E508B;
+}
+
 a.index-seminar-title:hover {
-	text-decoration: underline; }
+	text-decoration: underline;
+}
 
 span.index-seminar-speaker {
-	font-style: italic; }
-	
+	font-style: italic;
+}
+
 div.index-no-upcoming-seminar {
 	line-height: 140%;
 	margin: 0px;
 	padding: 10px 10px 5px 5px;
-	}
+}
 
 /***********************************************
 * news
 ************************************************/
-	
+
 div.index-news {
 	clear: both;
 	line-height: 140%;
 	padding: 3px 10px 3px 5px;
-	}
+}
 
 img.index-news-image {
 	margin: 0px 10px 0px 0px;
-	float: left; }
-	
+	float: left;
+}
+
 div.index-news-subject {
-	font-weight: bold; }
-	
+	font-weight: bold;
+}
+
 div.index-important {
 	padding: 3px 10px 3px 5px;
 	font-weight: bold;
-	}
-	
-a.index-important{
+}
+
+a.index-important {
 	text-decoration: none;
 	color: #3E508B;
-	}
-	
+}
+
 a.index-important:hover {
 	text-decoration: underline;
-	}
-	
+}
+
 /***********************************************
 * links
 ************************************************/
-	
+
 div.index-list-links {
 	margin: 5px 0px 0px 10px;
-	line-height: 140%; }
+	line-height: 140%;
+}
 
 div.index-list-link {
 	background-image: url(images/arrow-right-dark-blue.gif);
 	background-repeat: no-repeat;
 	background-position: 0px 4px;
-	padding-left: 13px; }
+	padding-left: 13px;
+}
 
 
 .pop {
 	position: relative;
 	z-index: 0;
-	}
+}
 
 .pop:hover {
 	background-color: transparent;
 	z-index: 50;
-	}
+}
 
-.pop span { /*CSS for enlarged image*/
+.pop span {
+	/*CSS for enlarged image*/
 	position: absolute;
 	overflow: hidden;
 	background-color: white;
@@ -144,24 +161,26 @@ div.index-list-link {
 	visibility: hidden;
 	color: black;
 	text-decoration: none;
-	}
+}
 
-.pop span img { /*CSS for enlarged image*/
+.pop span img {
+	/*CSS for enlarged image*/
 	overflow: hidden;
 	border-width: 0;
 	padding: 2px;
-	}
+}
 
-.pop:hover span { /*CSS for enlarged image on hover*/
+.pop:hover span {
+	/*CSS for enlarged image on hover*/
 	overflow: hidden;
 	visibility: visible;
-	}
+}
 
 
 /**
 
 
-a.pop span{ 
+a.pop span{
 position: absolute;
 z-index: 5;
 overflow: hidden;
@@ -175,13 +194,13 @@ a.pop:hover span{
 overflow: hidden;
 visibility: visible;
 bottom: 110px;
-right: 235px; 
+right: 235px;
 }
 a.pop.text :hover {
 overflow: hidden;
 visibility: visible;
 bottom: 110px;
-right: 235px; 
+right: 235px;
 }
 /*********
 
